testcases/error/invalid_direction.veryl
module invalid_direction (
    a: import logic,
) {}
